packages/cli/fixtures/logs/tsc/missing-import.txt
src/app.ts:3:10 - error TS2304: Cannot find name 'useState'.

3   const [count, setCount] = useState(0);
           ~~~~~~~~

src/app.ts:1:1 - error TS2307: Cannot find module 'react' or its corresponding type declarations.

1 import React from 'react';
  ~~~~~~~~~~~~~~~~~~~~~~~~~~


Found 2 errors.